# Torch-LLM-RL

./: .gitignore  README.md  conftest.py  main.py  pyproject.toml  pytest.ini  simple_example.py  test.ipynb  test.py  todo.txt
.github/workflows/: test.yml
AgentOrchestration/: train.py
AgentOrchestration/chat/: message.py
AgentOrchestration/env/: QASolve.py  ToolQASolve.py  env.py  tooluse_eny.py
AgentOrchestration/model/: generate.py
AgentOrchestration/reward/: boxed.py  length.py  reward.py
AgentOrchestration/tools/: tool.py  toolmanager.py
AgentOrchestration/trainer/: GRPO.py  train.py  trainer.py
AgentOrchestration/utils/: message.py  typing.py
SimpleTorchLLMRL/: __init__.py
SimpleTorchLLMRL/chat/: message.py
SimpleTorchLLMRL/dataset/: dataset.py
SimpleTorchLLMRL/env/: QASolve.py  ToolQASolve.py  env.py  taEnv.py
SimpleTorchLLMRL/model/: generate.py
SimpleTorchLLMRL/reward/: boxed.py  length.py  reward.py
SimpleTorchLLMRL/router_r1/: __init__.py  config.py  generation.py  reward.py  tools.py  tracking.py  trainer.py
SimpleTorchLLMRL/tools/: __init__.py  calculator.py  tool.py  toolmanager.py
SimpleTorchLLMRL/trainer/: GRPO.py  PPO.py  trainer.py
SimpleTorchLLMRL/utils/: inference.py
examples/: main.py  router_r1_math_qwen.py  router_r1_training.py
tests/test_chat/: test_message.py
tests/test_env/: test_tool_use.py
tests/test_integration/: test_training_pipline.py
tests/test_reward/: test_boxed.py
tests/test_tools/: test_calculator.py
tests/test_trainer/: test_grpo.py
tests/test_utils/: test_message.py  (+1 more)
(+10 files in other folders)
