[project]
name = "multi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.0",
    "ipykernel>=6.30.1",
    "openai>=1.99.6",
    "pytest>=8.4.1",
    "textarena>=0.7.3",
    "transformers>=4.55.0",
]
